@@ -18,6 +18,7 @@ Global
 	EndGlobalSection
 	GlobalSection(ProjectConfigurationPlatforms) = postSolution
 		{0F19250F-56ED-4ADB-80E1-306C9FFA97C7}.Debug|x86.ActiveCfg = Debug|x86
+		{0F19250F-56ED-4ADB-80E1-306C9FFA97C7}.Debug|x86.Build.0 = Debug|x86
 		{0F19250F-56ED-4ADB-80E1-306C9FFA97C7}.Release|x86.ActiveCfg = Release|x86
 		{49BA1C69-6104-41AC-A5D8-B54FA9F696E8}.Debug|x86.ActiveCfg = Debug|Any CPU
 		{49BA1C69-6104-41AC-A5D8-B54FA9F696E8}.Debug|x86.Build.0 = Debug|Any CPU
@@ -37,7 +38,7 @@ Global
 		{A7C14748-728B-427E-9946-3C6681F14A60}.Release|x86.Build.0 = Release|x86
 	EndGlobalSection
 	GlobalSection(MonoDevelopProperties) = preSolution
-		StartupItem = GREATClient\GREATClient.Linux.csproj
+		StartupItem = GREATClient\GREATClient.Windows.csproj
 		Policies = $0
 		$0.DotNetNamingPolicy = $1
 		$1.DirectoryNamespaceAssociation = Hierarchical
